--- a/src/components/styles/Authorization.css
+++ b/src/components/styles/Authorization.css
@@ -12,7 +12,7 @@
 }
 
 .authorization__welcome {
-  margin: 0;
+  margin: 0 0 10px;
   font-weight: 900;
   font-size: 24px;
   line-height: 1.21;
@@ -28,7 +28,7 @@
 }
 
 .authorization__form {
-  margin: 28px 0 0;
+  margin: 0;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.21;
@@ -39,10 +39,10 @@
 .authorization__input {
   width: 100%;
   height: 27px;
-  padding-top: 20px;
+  margin-top: 30px;
   border: none;
   border-bottom: 1px solid #fff;
-  /* outline: none; */
+  outline: none;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.21;
@@ -50,13 +50,14 @@
   color: #fff;
 }
 
-/* .authorization__button-container {
-} */
+.authorization__input_valid_error {
+  border-bottom: 1px solid rgba(255, 0, 0, 1);
+}
 
 .authorization__button {
   width: 100%;
   min-height: 50px;
-  margin-top: 220px;
+  margin-top: 210px;
   border: none;
   background-color: #000;
   cursor: pointer;
@@ -66,6 +67,10 @@
   line-height: 1.21;
   transition: opacity 0.6s;
   background-color: #fff;
+}
+
+.authorization__button_disabled {
+  color: rgba(0, 0, 0, 0.15);
 }
 
 .authorization__button:hover {
@@ -89,3 +94,18 @@
 .authorization__link:hover {
   opacity: 0.6;
 }
+
+/* .authorization__error {
+  font-weight: 400;
+  font-size: .75em;
+  line-height: 1.15;
+  color: #f00;
+  opacity: 0;
+  transition: .3s;
+  min-height: 30px;
+  padding: 3px 0;
+} */
+
+/* .authorization__error_visible {
+
+} */
