--- a/src/blocks/header/__link-logout/header__link-logout.css
+++ b/src/blocks/header/__link-logout/header__link-logout.css
@@ -12,3 +12,10 @@
   cursor: pointer;
   opacity: 0.6;
 }
+
+@media screen and (max-width: 425px) {
+  .header__link-logout {
+    font-size: 12px;
+  }
+}
+
