--- a/src/blocks/header/__link/header__link.css
+++ b/src/blocks/header/__link/header__link.css
@@ -5,10 +5,16 @@
   font-style: normal;
   font-weight: 500;
   line-height: 22px;
-  align-self: center;
+  align-self: flex-end;
 }
 
 .header__link:hover {
   cursor: pointer;
   opacity: 0.6;
+}
+
+@media screen and (max-width: 768px) {
+  .header__link {
+    margin-right: 8.4%;
+  }
 }
