--- a/src/blocks/header/__wrapper/header__wrapper.css
+++ b/src/blocks/header/__wrapper/header__wrapper.css
@@ -3,3 +3,18 @@
   text-align: right;
   gap: 24px;
 }
+
+@media screen and (max-width: 768px) {
+  .header__wrapper {
+    margin-right: 8%;
+    margin-left: 15px;
+    gap: 20px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .header__wrapper {
+    font-size: 12px;
+    gap: 14px;
+  }
+}
