--- a/src/blocks/header/__wrapper/header__wrapper.css
+++ b/src/blocks/header/__wrapper/header__wrapper.css
@@ -12,6 +12,21 @@
   }
 }
 
+@media screen and (max-width: 500px) {
+  .header__wrapper {
+    gap: 18px;
+    flex-direction: column;
+    position: fixed;
+    top: -100%;
+    margin: 0 auto;
+    padding: 40px 0;
+    align-self: center;
+    width: 100%;
+    border-bottom: 1px solid rgba(84, 84, 84, .7);
+    /* transition: top .1s; */
+  }
+}
+
 @media screen and (max-width: 425px) {
   .header__wrapper {
     font-size: 12px;
