--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,15 @@
 @import url(./blocks/content/content.css);
 
 @import url(./blocks/header/header.css);
+@import url(./blocks/header/_active/header_active.css);
 @import url(./blocks/header/__link/header__link.css);
 @import url(./blocks/header/__wrapper/header__wrapper.css);
+@import url(./blocks/header/__wrapper/_active/header__wrapper_active.css);
 @import url(./blocks/header/__link/header__link.css);
 @import url(./blocks/header/__link-logout/header__link-logout.css);
+@import url(./blocks/header/__email/header__email.css);
+@import url(./blocks/header/__burger-container/header__burger-container.css);
+@import url(./blocks/header/__burger-container/_active/header__burger-container_active.css);
 @import url(./blocks/logo/logo.css);
 
 @import url(./blocks/profile/profile.css);
